# manylatents-omics

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  README_KINDS.md  index.html  mkdocs.yml  pyproject-dna.toml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
clinvar_pipeline/: index.html
configs/: encode_sequences.yaml
configs/algorithms/latent/: central_dogma_fusion.yaml  encoder_adapter.yaml
configs/callbacks/: plot_admixture.yaml
configs/data/: embryoid_body.yaml  hgdp_aa_precomputed.yaml  hgdp_pca_precomputed.yaml  hgdp_split.yaml  manifold_genetics_example.yaml  pbmc_10k.yaml  pbmc_3k.yaml  pbmc_68k.yaml  sequence_gfp.yaml  sequence_synthetic.yaml
configs/encoder/: esm3.yaml  evo2.yaml  orthrus.yaml  orthrus_6track.yaml
configs/experiment/: central_dogma_fusion.yaml  central_dogma_test.yaml
configs/logger/: wandb.yaml
configs/metrics/dataset/: admixture_preservation_far.yaml  admixture_preservation_medians_far.yaml  admixture_preservationk.yaml  geographic_preservation_far.yaml  geographic_preservation_medians_far.yaml  gt_preservation.yaml  sample_id.yaml
configs/paths/: default.yaml
docs/: EXPERIMENT_SPEC.md  README.md  clinvar_pipeline.md  encoders.md  index.md  m-v0-oracle-contract.md  popgen.md  singlecell.md
docs/plans/: alphagenome-architecture-notes.md
encoders/: index.html
experiments/dogma/: run_fusion.py
experiments/dogma/configs/: dogma_config.yaml  encode_sequences.yaml
experiments/dogma/configs/experiment/: clinvar_delta_protein.yaml  clinvar_delta_rna.yaml  clinvar_geometric.yaml  dna_protein_fusion.yaml
experiments/dogma/configs/logger/: wandb_shop.yaml
experiments/dogma/configs/resources/: gpu_a100.yaml  gpu_dna.yaml  gpu_large.yaml  gpu_rna.yaml  gpu_tamia_dna.yaml
hydra_plugins/manylatents_omics/: __init__.py  searchpath_plugin.py
manylatents/: __init__.py  _data_paths.py  omics_plugin.py
manylatents/dogma/: __init__.py  signal.py  vep.py
manylatents/dogma/algorithms/: __init__.py  alphagenome_predictor.py  batch_encoder.py  fusion.py  learned_fusion.py
manylatents/dogma/configs/cluster/: mila_remote.yaml  mila_submitit.yaml  tamia_submitit.yaml
manylatents/dogma/configs/data/: clinvar.yaml  clinvar_precomputed.yaml  clinvar_variants.yaml  precomputed_embeddings.yaml  sequence_central_dogma.yaml  sequences_dna.yaml  sequences_protein.yaml  sequences_rna.yaml
manylatents/dogma/configs/encoders/: __init__.py  alphagenome.yaml  esm3.yaml  evo2.yaml  orthrus.yaml  orthrus_6track.yaml
manylatents/dogma/configs/experiment/: central_dogma_fusion.yaml  clinvar_delta_dna.yaml  clinvar_delta_protein.yaml  clinvar_delta_rna.yaml  clinvar_geometric.yaml
manylatents/dogma/data/: __init__.py  central_dogma_dataset.py  clinvar_dataset.py  sequence_dataset.py  test_variant_datamodule.py  variant_datamodule.py
manylatents/dogma/encoders/: __init__.py  alphagenome.py  base.py  cherimoya.py  esm.py  esm2.py  esm3.py  evo2.py  orthrus.py  orthrus_native.py
manylatents/dogma/experiments/: __init__.py  run_fusion.py
manylatents/dogma/oracles/: __init__.py
manylatents/dogma/scorers/: __init__.py  alphamissense.py
manylatents/kinds/: base.py  sparse_graph.py
manylatents/omics/: __init__.py  main.py
manylatents/omics/callbacks/: __init__.py  plot_admixture.py
manylatents/omics/data/: __init__.py  anndata_dataset.py  aou.py  aou_dataset.py  hgdp_dataset.py  mhi_dataset.py  plink_dataset.py  precomputed_mixin.py  ukbb.py  ukbb_dataset.py
manylatents/omics/metrics/: __init__.py  preservation.py  sample_id.py
manylatents/omics/scripts/: clean_up_admixture.py  clean_up_admixture_ukbb.py  download_data.sh  make_metadata_file.py  make_metadata_file_ukbb.py  make_subset_for_admixture.py  prep_aou_files.py  process_admixture.py
manylatents/omics/utils/: mappings.py
manylatents/popgen/: __init__.py
manylatents/popgen/callbacks/: __init__.py  plot_admixture.py
manylatents/popgen/data/: __init__.py  anndata.py  aou_dataset.py  hgdp.py  hgdp_dataset.py  manifold_genetics.py  manifold_genetics_dataset.py  mhi.py  mhi_dataset.py  plink_dataset.py  ukbb_dataset.py
manylatents/popgen/metrics/: __init__.py  preservation.py  sample_id.py
manylatents/singlecell/: __init__.py  sampling.py
manylatents/singlecell/algorithms/: __init__.py  scgpt_encoder.py  scvi_module.py
manylatents/singlecell/analysis/: __init__.py  complement_set.py  differential_expression.py  embedding_audit.py
manylatents/singlecell/data/: __init__.py  anndata_dataset.py  cellxgene_census.py
openspec/: project.md
openspec/changes/add-clinvar-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/consolidate-hydra-infrastructure/: design.md  proposal.md  tasks.md
openspec/changes/release-v020-roadmap/: proposal.md  tasks.md
popgen/: index.html
scripts/: deploy.sh  download_alphamissense.py  download_clinvar.py  download_embryoid_body.py  download_pbmc.py  download_scanpy_datasets.py  run_clinvar_pipeline.sh  run_e2e_test.sh  run_workshop_experiments.sh  setup-dna-venv.sh  setup-rna-venv.sh  setup-tamia.sh  smoke-test.sbatch  test_clinvar_e2e.py  verify_install.sh
search/: search_index.json
singlecell/: index.html
tests/: test_alphamissense_scorer.py  test_data_paths.py  test_preservation.py
tests/dogma/: test_config_e2e.py  test_encoders.py  test_imports.py  test_oracle_contract.py  test_signal.py
tests/dogma/encoders/: test_alphagenome.py  test_cherimoya.py
tests/kinds/: test_sparse_graph_protocol_conformance.py  test_sparse_graph_require_contract.py
tests/omics/: test_imports.py  test_plot_admixture.py
tests/popgen/: test_imports.py  test_manifold_genetics_datamodule.py  test_manifold_genetics_dataset.py  test_plot_admixture.py
tests/singlecell/: test_anndata_datamodule.py  test_anndata_dataset.py  test_complement_set.py  test_differential_expression.py  test_embedding_audit.py  test_from_anndata.py  test_imports.py  test_kinds.py  test_tenxdatasets.py
tests/singlecell/test_op/: example_ops.py
(+86 files in other folders)
