[project]
name = "manylatents-omics"
version = "0.2.0"
description = "Biological extensions for manylatents: popgen and central dogma encoders"
authors = [
    { name = "César Miguel Valdez Córdova", email = "cesar.valdez@mila.quebec" },
    { name = "Matthew Scicluna", email = "matthew.scicluna@mila.quebec" },
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
keywords = [
    "machine-learning",
    "dimensionality-reduction",
    "population-genetics",
    "foundation-models",
    "central-dogma",
]

dependencies = [
    "httpx>=0.28.1",
    "manylatents",
    "ninja>=1.13.0",
    "pandas-plink>=2.2.9",
    "torch==2.5.1",  # Pin for dogma-rna (mamba-ssm prebuilt wheels)
]

[project.optional-dependencies]
singlecell = ["anndata>=0.11.3", "python-igraph>=1.0.0", "scanpy>=1.11.5"]
esm = ["esm>=3.0"]

# RNA: torch 2.5.1 + mamba-ssm prebuilt (this venv)
orthrus = ["orthrus", "mamba-ssm==2.2.6.post3"]
dogma-rna = ["esm>=3.0", "orthrus", "mamba-ssm==2.2.6.post3"]

# DNA: needs separate venv with torch 2.8+ (see pyproject-dna.toml)
evo2 = ["evo2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["manylatents"]

[tool.uv]
managed = true
# Skip build isolation for mamba-ssm so it sees venv's torch 2.5.1
# and downloads prebuilt wheel from GitHub instead of compiling
no-build-isolation-package = ["mamba-ssm"]

# PyTorch CUDA 12.1 index for torch 2.5.x (mamba-ssm prebuilt wheels)
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
manylatents = { git = "https://github.com/latent-reasoning-works/manylatents.git", branch = "main" }
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "gpu: tests requiring GPU and model weights",
    "slow: tests that take significant time to run",
]

# Dependency metadata overrides
[[tool.uv.dependency-metadata]]
name = "heatgeo"
version = "0.0.1"
requires-dist = ["numpy>=1.23"]

[[tool.uv.dependency-metadata]]
name = "archetypes"
version = "0.11.1"
requires-dist = ["scipy>=1.8,<1.15"]

[[tool.uv.dependency-metadata]]
name = "magnipy"
version = "0.1.0"
requires-dist = ["torch>=2.4.1,<3.0.0", "scipy>=1.13.0,<1.15"]
