[project]
name = "manylatents-omics"
version = "0.2.0"
description = "Biological extensions for manylatents: popgen and central dogma encoders"
authors = [
    { name = "César Miguel Valdez Córdova", email = "cesar.valdez@mila.quebec" },
    { name = "Matthew Scicluna", email = "matthew.scicluna@mila.quebec" },
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
keywords = [
    "machine-learning",
    "dimensionality-reduction",
    "population-genetics",
    "foundation-models",
    "central-dogma",
]

dependencies = [
    "faiss-gpu-cu12",
    "httpx>=0.28.1",
    "manylatents",
    "ninja>=1.13.0",
    "pandas-plink>=2.2.9",
    # torch in extras - RNA and DNA need different versions
]

[project.optional-dependencies]
singlecell = ["anndata>=0.11.3", "python-igraph>=1.0.0", "scanpy>=1.11.5"]
esm = ["esm>=3.0"]
orthrus = ["orthrus", "mamba-ssm==2.2.6.post3"]
evo2 = ["evo2"]

# RNA (default locked venv): uv sync --extra dogma
dogma = ["torch==2.5.1", "esm>=3.0", "orthrus", "mamba-ssm==2.2.6.post3"]

# DNA (unlocked venv via uv pip): installs torch>=2.8 + evo2
# See scripts/setup-dna-venv.sh

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["manylatents"]

[tool.uv]
managed = true
# Skip build isolation for mamba-ssm so it sees venv's torch 2.5.1
# and downloads prebuilt wheel from GitHub instead of compiling
no-build-isolation-package = ["mamba-ssm"]

# PyTorch CUDA 12.1 index for locked venv (torch 2.5.1 + mamba-ssm)
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# PyTorch CUDA 12.6 index for DNA venv (torch 2.8+ via uv pip)
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
manylatents = { git = "https://github.com/latent-reasoning-works/manylatents.git", branch = "main" }
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "gpu: tests requiring GPU and model weights",
    "slow: tests that take significant time to run",
]

# Dependency metadata overrides
[[tool.uv.dependency-metadata]]
name = "heatgeo"
version = "0.0.1"
requires-dist = ["numpy>=1.23"]

[[tool.uv.dependency-metadata]]
name = "archetypes"
version = "0.11.1"
requires-dist = ["scipy>=1.8,<1.15"]

[[tool.uv.dependency-metadata]]
name = "magnipy"
version = "0.1.0"
requires-dist = ["torch>=2.4.1,<3.0.0", "scipy>=1.13.0,<1.15"]
