[project]
name = "manylatents-omics"
version = "0.1.0"
description = "Biological extensions for manylatents: popgen and central dogma encoders"
authors = [
    { name = "César Miguel Valdez Córdova", email = "cesar.valdez@mila.quebec" },
    { name = "Matthew Scicluna", email = "matthew.scicluna@mila.quebec" },
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
keywords = [
    "machine-learning",
    "dimensionality-reduction",
    "population-genetics",
    "foundation-models",
    "central-dogma",
]
license = "MIT"

dependencies = [
    "manylatents",
]

[project.optional-dependencies]
# Domain data modules
singlecell = ["anndata>=0.11.3", "leidenalg>=0.10", "python-igraph>=1.0.0", "scanpy>=1.11.5"]
popgen = ["pandas-plink>=2.2.9"]

# Protein + RNA encoders (ESM3 + Orthrus, torch 2.5.x compatible)
# DNA encoder (Evo2) requires separate venv — see scripts/setup-dna-venv.sh
dogma = ["esm>=3.0", "orthrus", "mamba-ssm==2.2.6.post3"]

# Utilities
gpu = ["faiss-gpu-cu12"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.6"]

# Dev/CI only
dev = [
    "manylatents-omics[dogma,singlecell,popgen]",
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/latent-reasoning-works/manylatents-omics"
Documentation = "https://latent-reasoning-works.github.io/manylatents-omics/"
Repository = "https://github.com/latent-reasoning-works/manylatents-omics"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.entry-points."manylatents.extensions"]
omics = "manylatents.omics_plugin:OmicsSearchPathPlugin"

[tool.hatch.build.targets.wheel]
packages = ["manylatents"]

[tool.uv]
managed = true
no-build-isolation-package = ["mamba-ssm"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "gpu: tests requiring GPU and model weights",
    "slow: tests that take significant time to run",
]

# Dependency metadata overrides
[[tool.uv.dependency-metadata]]
name = "heatgeo"
version = "0.0.1"
requires-dist = ["numpy>=1.23"]

[[tool.uv.dependency-metadata]]
name = "archetypes"
version = "0.11.1"
requires-dist = ["scipy>=1.8,<1.15"]

[[tool.uv.dependency-metadata]]
name = "magnipy"
version = "0.1.0"
requires-dist = ["torch>=2.4.1,<3.0.0", "scipy>=1.13.0,<1.15"]
